# Zeitumstellung

./: .gitignore  Pipfile  pyproject.toml  sunrise-sunset.json
assets/: berlin.json  cologne.json  madrid.json
