[tool.poetry]
name = "zeitumstellung"
version = "0.1.0"
description = ""
authors = ["Nils <nils@ungerichtet.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
numpy = "^1.24.1"
pandas = "^1.5.2"
plotly = "^5.12.0"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
